kustomize/apps/integration-wb/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: integration-wb
    app.kubernetes.io/component: integration-wb
    app.kubernetes.io/part-of: vms
    global-app-name: vsaas
  name: integration-wb
  namespace: vsaas-vms
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: integration-wb
      app.kubernetes.io/component: integration-wb
      app.kubernetes.io/part-of: vms
      global-app-name: vsaas
  template:
    metadata:
      labels:
        app.kubernetes.io/name: integration-wb
        app.kubernetes.io/component: integration-wb
        app.kubernetes.io/part-of: vms
        global-app-name: vsaas
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: integration-wb
                    app.kubernetes.io/component: integration-wb
                    app.kubernetes.io/part-of: vms
                    global-app-name: vsaas
                topologyKey: kubernetes.io/hostname
      containers:
        - name: integration-wb
          args:
            - php
            - /var/www/api/artisan
            - octane:start
            - --port=8080
            - --host=0.0.0.0
            - --task-workers=2
            - --max-requests=2000
          image: download.aipix.ai:8443/vsaas-vms/integration-wb/release:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 40m
              memory: 1000Mi
      imagePullSecrets:
        - name: download-aipix-ai
      hostname: integration-wb
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: wb-share-player
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: vms
    global-app-name: vsaas
  name: wb-share-player
  namespace: vsaas-vms
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wb-share-player
      app.kubernetes.io/component: frontend
      app.kubernetes.io/part-of: vms
      global-app-name: vsaas
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wb-share-player
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: vms
        global-app-name: vsaas
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: wb-share-player
                    app.kubernetes.io/component: frontend
                    app.kubernetes.io/part-of: vms
                    global-app-name: vsaas
                topologyKey: kubernetes.io/hostname
      containers:
        - name: wb-share-player
          image: download.aipix.ai:8443/vsaas-vms/wb-share-player/release:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 80
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 80
            periodSeconds: 5
          resources:
            requests:
              cpu: 5m
              memory: 50Mi
      imagePullSecrets:
        - name: download-aipix-ai
      hostname: wb-share-player
      restartPolicy: Always
